--- a/index.html
+++ b/index.html
@@ -6,9 +6,26 @@
     <title>Assignment-2</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
-<body>
-    <header>
-
+<body class="over-pass-font">
+    <header class="bg-color">
+        <nav class="navbar">
+            <h3 class="brand-name">Fitness</h3>
+            <ul class="nav-linkes">
+                <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Service</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-title">Get body in <br> <span class="banner-font-style">shape</span> & stay healthy</h3>
+                <p class="banner-discription">A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+                <button class="btn-join-clun">Join Club Now!</button>
+                <button class="btn-download">Download App</button>
+            </div>
+            <img class="banner-image" src="images/Images 2.png" alt="">
+        </div>
     </header>
     <main>
 
