--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav class="navbar">
             <h3 class="brand-name">Fitness</h3>
             <ul class="nav-linkes">
-                <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="#" class="nav-link home">Home</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Service</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">About</a></li>
@@ -28,7 +28,34 @@
         </div>
     </header>
     <main>
-
+        <section class="habits-continers bg-color">
+            <div class="habits-contine">
+                <h2 class="habits-title">Change Your Habits</h2>
+                <p class="habits-discription">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+            <div class="habits-contine-item">
+                <div class="habits-contine1">
+                    <img class="habits-contine1-image1" src="images/image 3.png" alt="">
+                    <h2 class="habits-contine-title">Movement</h2>
+                    <p class="habits-contine-discription">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="habits-contine2">
+                    <img class="habits-contine1-image2" src="images/image 2.png" alt="">
+                    <h2 class="habits-contine-title">Time</h2>
+                    <p class="habits-contine-discription">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="habits-contine3">
+                    <img class="habits-contine1-image3" src="images/image 4.png" alt="">
+                    <h2 class="habits-contine-title">Practice</h2>
+                    <p class="habits-contine-discription">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="habits-contine4">
+                    <img class="habits-contine1-image4" src="images/image 5.png" alt="">
+                    <h2 class="habits-contine-title">Weight Loss</h2>
+                    <p class="habits-contine-discription">We believe fitness should be accessible to everyone</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
