--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Assignment-2</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
-<body class="over-pass-font">
+<body class="over-pass-font bg-color">
     <header class="bg-color">
         <nav class="navbar">
             <h3 class="brand-name">Fitness</h3>
@@ -56,9 +56,48 @@
                 </div>
             </div>
         </section>
+        <section class="run-extra-content">
+            <div>
+                <div class="run-extra-contener">
+                    <h2 class="run-extra-title">Run an Extra <br> Mile Easily</h2>
+                        <p class="run-extra-discription">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                <button class="run-extra-btn">Join Now</button>     
+                </div>
+            </div>
+            <img class="run-extra-iamge" src="images/run.jpg" alt="">
+        </section>
     </main>
     <footer>
-
+        <div class="footer-sec">
+            <div class="footer-content">
+                <h2 class="brand-name">Fitness</h2>
+                <p class="footer-brand-discription">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts. </p>
+            </div>
+            <div class="footer-contener">
+                <div class="footer-content-1">
+                    <h2>Get Started</h2>
+                    <div>
+                        <ul>
+                            <li class="footer-itam"><a href="#" class="footer-link">Service</a></li>
+                            <li class="footer-itam"><a href="#" class="footer-link">Contact Us</a></li>
+                            <li class="footer-itam"><a href="#" class="footer-link">Affiliate Program</a></li>
+                            <li class="footer-itam"><a href="#" class="footer-link">About Us</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer-content-2">
+                    <h2>Get Started</h2>
+                    <div>
+                        <ul>
+                            <li class="footer-itam"><a href="#" class="footer-link">Fitness</a></li>
+                            <li class="footer-itam"><a href="#" class="footer-link">Platform</a></li>
+                            <li class="footer-itam"><a href="#" class="footer-link">Workout Libary</a></li>
+                            <li class="footer-itam"><a href="#" class="footer-link">App Design</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
