--- a/index.html
+++ b/index.html
@@ -5,26 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-2</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 </head>
-<body class="over-pass-font bg-color">
-    <header class="bg-color">
-        <nav class="navbar">
-            <h3 class="brand-name">Fitness</h3>
-            <ul class="nav-linkes">
-                <li class="nav-item"><a href="#" class="nav-link home">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Service</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-            </ul>
-        </nav>
-        <div class="banner">
-            <div class="banner-content">
-                <h3 class="banner-title">Get body in <br> <span class="banner-font-style">shape</span> & stay healthy</h3>
-                <p class="banner-discription">A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
-                <button class="btn-join-clun">Join Club Now!</button>
-                <button class="btn-download">Download App</button>
+<body class="font color">
+    <header>
+        <nav class="nav flex">
+            <h2 class="nav-tittle"><i> Fitness</i></h2>
+            <div class="navbar  ">  
+
+                <div class="nav-items flex">
+                   <button class="btn"><a href="" class="nav-link-1"> Home</a></button>
+                    <ul class="nav-item flex"></ul>
+                        <li class="nav-links"><a href="" class="nav-link"> Service</a> </li>
+                        <li class="nav-links"><a href="" class="nav-link"> Contact</a> </li>
+                        <li class="nav-links"><a href="" class="nav-link"> About </a> </li>
+                    </ul>
+                </div>
+            
             </div>
-            <img class="banner-image" src="images/Images 2.png" alt="">
+        </nav>
+        <div class="header-containt flex">
+            <div class="header-contaner">
+                <h1 class="header-tittle"> Get body in<br><span id="shape">shape</span> & stay<br>healthy </h1>
+                <p class="header-description"> A huge selection of health and fitness content, healthy recipes<br>
+                    and transformation stories to help you get fit and stay fit!</p>
+                  <button class="btn"> <a href="" class="nav-link-1"> Join Club Now!</a></button>  
+                  <button class="btn-1"> <a href="" class="nav-link-1"> Download App </a></button>  
+
+            </div>
+            <div>
+                <div class="header-img">
+                    <img src="images/Images 2.png" alt="">
+                    <div class="video-tuitorial-container flex">
+                       <div class="circle">
+                       </div>
+                       <div>
+                           <h2 class="video-title">350+</h2>
+                           <p class="video-description">video Tutorial</p>
+                       </div>
+                       <div class="free-container">
+                        <h2 class="free-title">500+</h2>
+                        <p class="free-description">free Workout Videos</p>
+                        </div>
+                   </div>
+               </div>
+            </div>
         </div>
     </header>
     <main>
@@ -33,7 +60,7 @@
                 <h2 class="habits-title">Change Your Habits</h2>
                 <p class="habits-discription">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
             </div>
-            <div class="habits-contine-item">
+            <div class="habits-contine-item flex">
                 <div class="habits-contine1">
                     <img class="habits-contine1-image1" src="images/image 3.png" alt="">
                     <h2 class="habits-contine-title">Movement</h2>
@@ -65,6 +92,9 @@
                 </div>
             </div>
             <img class="run-extra-iamge" src="images/run.jpg" alt="">
+        </section>
+        <section>
+        
         </section>
     </main>
     <footer>
