--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
                 </div>
             </div>
         </section>
-        <section class="run-extra-content">
+        <section class="run-extra-content flex">
             <div>
                 <div class="run-extra-contener">
                     <h2 class="run-extra-title">Run an Extra <br> Mile Easily</h2>
                         <p class="run-extra-discription">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
-                <button class="run-extra-btn">Join Now</button>     
+                <button class="btn">Join Now</button>     
                 </div>
             </div>
             <img class="run-extra-iamge" src="images/run.jpg" alt="">
@@ -96,6 +96,8 @@
         <section>
         
         </section>
+
+        
     </main>
     <footer>
         <div class="footer-sec">
