--- a/index.html
+++ b/index.html
@@ -99,37 +99,40 @@
 
         
     </main>
-    <footer>
-        <div class="footer-sec">
-            <div class="footer-content">
-                <h2 class="brand-name">Fitness</h2>
-                <p class="footer-brand-discription">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts. </p>
-            </div>
-            <div class="footer-contener">
-                <div class="footer-content-1">
-                    <h2>Get Started</h2>
-                    <div>
-                        <ul>
-                            <li class="footer-itam"><a href="#" class="footer-link">Service</a></li>
-                            <li class="footer-itam"><a href="#" class="footer-link">Contact Us</a></li>
-                            <li class="footer-itam"><a href="#" class="footer-link">Affiliate Program</a></li>
-                            <li class="footer-itam"><a href="#" class="footer-link">About Us</a></li>
-                        </ul>
-                    </div>
+    <div class="footer-sec flex">
+        <div class="footer-content">
+            <h2 class="brand-name"><i> Fitness</i></h2>
+            <p class="footer-brand-discription">We believe fitness should be accessible to everyone,<br>
+                everywhere, regardless of income or access to a gym. With <br>
+                hundreds of professional workouts. </p>
+        </div>
+        <div class="footer-contener flex">
+            <div class="footer-content-1">
+                <h2 class="footer-tittle">Get Started</h2>
+                <div>
+                    <ul class="footer-links">
+                        <li class="footer-itam"><a href="#" class="footer-link">Service</a></li>
+                        <li class="footer-itam"><a href="#" class="footer-link">Contact Us</a></li>
+                        <li class="footer-itam"><a href="#" class="footer-link">Affiliate Program</a></li>
+                        <li class="footer-itam"><a href="#" class="footer-link">About Us</a></li>
+                    </ul>
                 </div>
-                <div class="footer-content-2">
-                    <h2>Get Started</h2>
-                    <div>
-                        <ul>
-                            <li class="footer-itam"><a href="#" class="footer-link">Fitness</a></li>
-                            <li class="footer-itam"><a href="#" class="footer-link">Platform</a></li>
-                            <li class="footer-itam"><a href="#" class="footer-link">Workout Libary</a></li>
-                            <li class="footer-itam"><a href="#" class="footer-link">App Design</a></li>
-                        </ul>
-                    </div>
+            </div>
+            <div class="footer-content-1">
+                <h2 class="footer-tittle">Get Started</h2>
+                <div>
+                    <ul class="footer-links">
+                        <li class="footer-itam"><a href="#" class="footer-link">Fitness</a></li>
+                        <li class="footer-itam"><a href="#" class="footer-link">Platform</a></li>
+                        <li class="footer-itam"><a href="#" class="footer-link">Workout Libary</a></li>
+                        <li class="footer-itam"><a href="#" class="footer-link">App Design</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
-    </footer>
+    </div>
+    <hr>
+    <h4 class="copyright">All right reserved @fitness 2024</h4>
+</footer>
 </body>
 </html>
