--- a/index.html
+++ b/index.html
@@ -94,10 +94,66 @@
             <img class="run-extra-iamge" src="images/run.jpg" alt="">
         </section>
         <section>
-        
+            <div class="team-content">
+                <h2>Meet Our Team</h2>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+            <div class="team-images">
+                <div class="team-image">
+                    <img class="team-contant-image" src="images/trainer1.png" alt=""> 
+                    <img class="team-contant-image" src="images/trainer2.png" alt="">
+                    <img class="team-contant-image" src="images/trainer3.png" alt="">
+                    <img class="team-contant-image" src="images/trainer4.png" alt="">
+                    <img class="team-contant-image" src="images/trainer5.png" alt="">
+                    <img class="team-contant-image" src="images/trainer6.png" alt="">
+                </div>
+            </div>
         </section>
-
-        
+        <section class="bmi-calculatorr-container flex">
+            <div class="bmi-chat">
+                <h1 class="bmi-calculator-chart">BMI Calculator Chart</h1>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>BMI</th>
+                            <th>Weight Status</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Below 18.5</td>
+                            <td>Underweight</td>
+                        </tr>
+                        <tr>
+                            <td>18.5 - 24.9</td>
+                            <td>Healthy</td>
+                        </tr>
+                        <tr>
+                            <td>25.0 - 29.9</td>
+                            <td>Overweight</td>
+                        </tr>
+                        <tr>
+                            <td>30.0 - and Above</td>
+                            <td>Obese</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="bmi-calculate">
+                <h2>Calculate your BMI</h2>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
+                <input class="sex" type="text" placeholder="Height/cm">
+                <input class="sex" type="text" placeholder="Weight/kg">
+                <input class="sex" type="text" placeholder="Age">
+                <select name="" id="" class="sex">
+                    <option value=""> Sex</option>
+                </select>
+                <select name="" id="" class="select">
+                    <option value=""> Select an activity factor</option>
+                </select>
+                <button class="btn">Calculate</button>
+            </div>
+         </section>
     </main>
     <div class="footer-sec flex">
         <div class="footer-content">
@@ -132,7 +188,7 @@
         </div>
     </div>
     <hr>
-    <h4 class="copyright">All right reserved @fitness 2024</h4>
+    <h2 class="copyright">All right reserved @fitness 2024</h2>
 </footer>
 </body>
 </html>
